# inertial-autoresearch

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml  selected_candidate.json
.github/workflows/: ci.yml
.tmuxinator/: mission-control-euroc.yml  mission-control.yml
autoresearch_loop/: __init__.py  hermes.py  loop.py  mutations.py  program.md  researchclaw_config.yaml  results.tsv
configs/: autoresearch.yaml  base.yaml  device.yaml
configs/mission_control/: adapters.yaml  hermes_euroc_subset.yaml  hermes_euroc_temporal.yaml  hermes_smoke.yaml  hermes_subset.yaml
configs/models/: conv1d.yaml  lstm.yaml  transformer.yaml
configs/training/: default.yaml  quick.yaml
docker/: Dockerfile  docker-compose.yml
docs/: autoresearch_core_architecture.md  autoresearch_core_split_inventory.md  imu_research_validity_status.md  loop_analytics_backlog.md  mission_control_research_policy_plan.md
scripts/: dashboard.py  download_data.py  evaluate.py  mission_control_supervisor.sh  monitor.py  observability_backfill.py  observability_sync.py  preprocess_data.py  run_baseline.py  start_mission_control.py  train.py
src/autoresearch_core/: __init__.py  contracts.py  engine.py  policy.py  training.py
src/imu_denoise/: __init__.py
tests/: conftest.py
tests/smoke/: test_end_to_end.py
tests/unit/: test_architecture.py  test_autoresearch.py  test_autoresearch_core.py  test_classical.py  test_config.py  test_dashboard_cli.py  test_data.py  test_device.py  test_evaluation.py  test_mission_control_cli.py  test_models.py  test_training.py  (+3 more)
(+106 files in other folders)
