[project]
name = "imu-denoise"
version = "0.1.0"
description = "Autonomous IMU denoising research with multi-device support"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "rich>=13.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.optional-dependencies]
euroc = ["rosbags>=0.9"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
]
notebooks = [
    "jupyterlab>=4.0",
    "seaborn>=0.12",
]
all = ["imu-denoise[euroc,dev,notebooks]"]

[project.scripts]
imu-train = "imu_denoise.cli.train:main"
imu-eval = "imu_denoise.cli.evaluate:main"
imu-data = "imu_denoise.cli.download_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imu_denoise"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require real data or long training",
    "gpu: marks tests that require GPU",
]
addopts = "-q --tb=short -m 'not slow and not gpu'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
